# learning-rust

./: .gitignore  Resource.md
01_HelloWorld/: Cargo.toml
02_Primitives/: Cargo.toml
02_Primitives/src/: arrays.rs  main.rs  primitives.rs  tuples.rs
03_CustomTypes/: Cargo.toml
03_CustomTypes/src/: main.rs  option_enum.rs
04_Borrowing/: Cargo.toml
04_Borrowing/src/: main.rs
05_Lifetimes/: Cargo.toml
05_Lifetimes/src/: function_lifetimes.rs  immutable_and_lifetimes.rs  impl_lifetimes.rs  main.rs  mutable_and_lifetimes.rs  ref_lifetime.rs  simple_lifetime.rs  static_lifetime.rs  struct_lifetimes.rs
06_Slices/: Cargo.toml
06_Slices/src/: borrow_slices.rs  main.rs  range_literals.rs  split_slices.rs
07_ReturnResult/: Cargo.toml
07_ReturnResult/src/: main.rs  std_return.rs
08_Dereference/: Cargo.toml
08_Dereference/src/: main.rs  simple_dereference.rs
09_Closures/: Cargo.toml
09_Closures/src/: closure_countdown.rs  closure_fn.rs  closure_fn_with_borrows.rs  closure_fn_with_staticlifetime.rs  closure_fnmut.rs  closure_fnonce.rs  closure_from_function.rs  closure_with_multiple_arguments.rs  main.rs
10_Iterators/: Cargo.toml
10_Iterators/src/: iterate_simple.rs  main.rs
99_tcp_socket_no_std/: Cargo.toml
99_tcp_socket_no_std/src/: main.rs  server.rs
ascii_torus/: Cargo.toml  README.md
ascii_torus/src/: main.rs
rng_daily/: Cargo.toml  README.md
rng_daily/src/: display.rs  font.rs  main.rs  names.rs
rng_daily/src/font/: glyph.rc  glyph.rs
rng_daily/src/names/: people.txt  rust.txt
