[package]
name = "rng_daily"
version = "0.1.0"
authors = ["Christian Empting <Christian.Empting@zuehlke.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
termion = "1.5.6"
rand = "0.8.5"
anyhow = "1.0.57"
crossbeam-channel = "0.5.4"
signal-hook = "0.3.14"

